<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.szymon.ewtk.Fragment.Menu.UserDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="#eeeeee"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_marginLeft="@dimen/text_profile"
                android:layout_marginTop="@dimen/text_top_profile"
                android:layout_marginBottom="@dimen/text_top_profile"
                android:id="@+id/circleProfile"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/email"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/text_profile"
                android:layout_marginTop="18dp"
                android:textColor="#000000"
                android:textSize="17dp" />

        </LinearLayout>

        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B6B6B6" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="@dimen/scrollbar_size"
            android:scrollbarThumbVertical="@drawable/scrollbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/text_profile"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/name"
                        android:textSize="@dimen/text_top_profile" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="@string/score_points"
                        android:textSize="@dimen/text_top_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/nameUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />

                    <TextView
                        android:id="@+id/pointsUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/surname"
                        android:textSize="@dimen/text_top_profile" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="@string/gender"
                        android:textSize="@dimen/text_top_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/surnameUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />

                    <TextView
                        android:id="@+id/genderUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/birth_date"
                        android:textSize="@dimen/text_top_profile" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="@string/age"
                        android:textSize="@dimen/text_top_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/birthDateUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />

                    <TextView
                        android:id="@+id/ageUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/pesel"
                        android:textSize="@dimen/text_top_profile" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="@string/growth"
                        android:textSize="@dimen/text_top_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/peselUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />

                    <TextView
                        android:id="@+id/growthUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/phone"
                        android:textSize="@dimen/text_top_profile" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="@string/weight"
                        android:textSize="@dimen/text_top_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/phoneUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />

                    <TextView
                        android:id="@+id/weightUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/street"
                        android:textSize="@dimen/text_top_profile" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:text="@string/blood"
                        android:textSize="@dimen/text_top_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/streetUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />

                    <TextView
                        android:id="@+id/bloodUser"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_profile" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zipcode"
                    android:textSize="@dimen/text_top_profile" />

                <TextView
                    android:id="@+id/zipcodeUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/town"
                    android:textSize="@dimen/text_top_profile" />

                <TextView
                    android:id="@+id/townUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutme"
                    android:textSize="@dimen/text_top_profile" />

                <TextView
                    android:id="@+id/aboutmeUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="5000"
                    android:maxLines="8"
                    android:scrollHorizontally="false"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_profile" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
